--- a/SupplementFiles/Table App B nonspawner covariates M wo S2.Rmd
+++ b/SupplementFiles/Table App B nonspawner covariates M wo S2.Rmd
@@ -187,7 +187,7 @@ seltable=seltable[1:(dim(seltable)[1]-1),]
 colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AIC")
 if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC")
 
-thecap=paste("Model selection tests of GPCP precipitation as an explanatory variable for the catch ($N_t$) during post-monsoon months (Oct-May) using", Yr1, "to", Yr2,  "data and the base model without $S_{t-2}$.  The data range is determined by the years for which SST was available in order to use a consistent dataset across covariate tests.  The base model (M) with prior catch dependency was selected independently (Appendix A). $N_{t-1}$ is the post-monsoon catch in prior season, and $S_{t-2}$ is the catch during Jul-Sep two seasons prior.  To the base model, covariates are added.  $V_t$ is the covariate in the calendar year, and $V_{t-1}$ is the covariate in the prior calendar year. The specific hypothesis (Table ", ref("tab:hypotheses"), ") being tested is noted in parentheses. The models are tested as nested sets.  Thus 1, 2a, 3a is a set and 1, 2b, 3b is another set.")
+thecap=paste("Model selection tests of GPCP precipitation as an explanatory variable for the catch ($N_t$) during post-monsoon months (Oct-Mar) using", Yr1, "to", Yr2,  "data and the base model without $S_{t-2}$.  The data range is determined by the years for which SST was available in order to use a consistent dataset across covariate tests.  The base model (M) with prior catch dependency was selected independently (Appendix A). $N_{t-1}$ is the post-monsoon catch in prior season, and $S_{t-2}$ is the catch during Jul-Sep two seasons prior.  To the base model, covariates are added.  $V_t$ is the covariate in the calendar year, and $V_{t-1}$ is the covariate in the prior calendar year. The specific hypothesis (Table ", ref("tab:hypotheses"), ") being tested is noted in parentheses. The models are tested as nested sets.  Thus 1, 2a, 3a is a set and 1, 2b, 3b is another set.")
 fullcap=paste("Table ", ref(paste0(tabset,"nspawner-model-precipM2"), pre=pre), ". ", thecap, sep="")
 kable(seltable, align="lcccccc", caption=fullcap, row.names=FALSE, escape=FALSE)
 ```
@@ -434,7 +434,7 @@ seltable=seltable[1:(dim(seltable)[1]-1),]
 colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AIC")
 if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC")
 
-thecap=paste0("Model selection tests of sea surface temperature off the Kerala coast (up to 80km offshore in boxes 2-5 in Figure 1), and upwelling indices as the explanatory variables ($V$) for the catch during post-monsoon months (Oct-May) using ", Yr1," to ", Yr2, " data and base model without $S_{t-2}$.  The hypothesis tested (Table ", ref("tab:hypotheses"), ") is noted in parentheses. Three upwelling indices were tested. The nearshore-offshore temperature diferential (UPW), which is the offshore minus nearshore SST, the average nearshore SST along the Kerala coast (boxes 2-5), and the Bakun upwelling index based on wind stress. See Table ", ref(paste0(tabset,"nspawner-model-precip"), pre=pre), " for an explanation of the models.")
+thecap=paste0("Model selection tests of sea surface temperature off the Kerala coast (up to 80km offshore in boxes 2-5 in Figure 1), and upwelling indices as the explanatory variables ($V$) for the catch during post-monsoon months (Oct-Mar) using ", Yr1," to ", Yr2, " data and base model without $S_{t-2}$.  The hypothesis tested (Table ", ref("tab:hypotheses"), ") is noted in parentheses. Three upwelling indices were tested. The nearshore-offshore temperature diferential (UPW), which is the offshore minus nearshore SST, the average nearshore SST along the Kerala coast (boxes 2-5), and the Bakun upwelling index based on wind stress. See Table ", ref(paste0(tabset,"nspawner-model-precip"), pre=pre), " for an explanation of the models.")
 fullcap=paste("Table ", ref(paste0(tabset,"nspawner-model-sstM2"), pre=pre), ". ", thecap, sep="")
 kable(seltable, align="lcccccc", caption=fullcap, row.names=FALSE, escape=FALSE)
 ```
@@ -610,7 +610,7 @@ seltable=seltable[1:(dim(seltable)[1]-1),]
 colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AIC")
 if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC")
 
-thecap=paste0("Model selection tests of the multi-year average nearshore sea surface temperature and ENSO indices as the explanatory variables ($V$) for the catch during post-monsoon months (Oct-May) using ", Yr1," to ", Yr2, " data and base model without $S_{t-2}$.  The hypothesis tested (Table ", ref("tab:hypotheses"), ") is noted in parentheses. The ENSO indices were the ONI index averaged over all months in the calendar year and the DMI index for Sep-Nov. The 2.5-year average nearshore SST is the average for Jan-Jun in the current calendar year and the prior 2 calendar years (30 months total). Thus the average does not include any months during the Oct-Mar catch.  See Table ", ref(paste0(tabset,"nspawner-model-precip"), pre=pre), " for an explanation of the models.")
+thecap=paste0("Model selection tests of the multiyear average nearshore sea surface temperature and ENSO indices as the explanatory variables ($V$) for the catch during post-monsoon months (Oct-Mar) using ", Yr1," to ", Yr2, " data and base model without $S_{t-2}$.  The hypothesis tested (Table ", ref("tab:hypotheses"), ") is noted in parentheses. The ENSO indices were the ONI index averaged over all months in the calendar year and the DMI index for Sep-Nov. The 2.5-year average nearshore SST is the average for Jan-Jun in the current calendar year and the prior 2 calendar years (30 months total). Thus the average does not include any months during the Oct-Mar catch.  See Table ", ref(paste0(tabset,"nspawner-model-precip"), pre=pre), " for an explanation of the models.")
 fullcap=paste("Table ", ref(paste0(tabset,"nspawner-model-ensoM2"), pre=pre), ". ", thecap, sep="")
 kable(seltable, align="lcccccc", caption=fullcap, row.names=FALSE, escape=FALSE)
 ```
