--- a/AppendixFiles/Appendix-Functions.Rmd
+++ b/AppendixFiles/Appendix-Functions.Rmd
@@ -127,12 +127,13 @@ getcovtit <- function(covname){
   if(covname=="Wind.UPW.4.mon6to9.") covtit = "$V_t$ = Jun-Sep Wind-UPW (L2)"
   if(covname=="SST.UPW.4.mon6to9.") covtit = "$V_t$ = Jun-Sep SST-derived UPW (L2)"
   if(covname=="SST.2.5.mon6to9.") covtit = "$V_t$ = Jun-Sep ns-SST (L2)"
-  if(covname=="SST.2.10.3.yr.runsum.") covtit = "$V_t$ = 2.5-year average r-SST (A1)"
+  if(covname=="SST.2.10.3.yr.runsum.") covtit = "$V_t$ = 2.5-year average r-SST - AVHRR (A1)"
   if(covname=="SST.11.13.3.yr.runsum.") covtit = "$V_t$ = 2.5-year average fo-SST (A1)"
   if(covname=="SST.7.10.3.yr.runsum.") covtit = "$V_t$ = 2.5-year average o-SST (A1)"
   if(covname=="SST.7.13.3.yr.runsum.") covtit = "$V_t$ = 2.5-year ave o-SST (A1)"
   if(covname=="SST.2.5.3.yr.runsum.") covtit = "$V_t$ = 2.5-year avereage ns-SST (A1)"
   if(covname=="SST.1.13.3.yr.runsum.") covtit = "$V_t$ = 2.5-year average rr-SST (A1)"
+  if(covname=="SSTICOAD.2.10.3.yr.runsum.") covtit = "$V_t$ = 2.5-year average r-SST (A1)"
   if(covname=="ONI.mon1to12.") covtit = "$V_t$ = ONI (A2)"
   if(covname=="DMI.mon9to11.") covtit = "$V_t$ = Sep-Nov DMI (A3)"
   if(covname=="DMI.mon6to9.") covtit = "$V_t$ = Jun-Sep DMI (A3)"
