--- a/SupplementFiles/Table App H data.Rmd
+++ b/SupplementFiles/Table App H data.Rmd
@@ -49,7 +49,7 @@ varnames <- c(Year="Year",
               SST.2.10.3.yr.runsum.0 = "2.5 yr ave r-SST",
               ONI.mon1to12.0 = "ONI",
               DMI.mon9to11.0 = "Sep-Nov DMI",
-              DMI.3.yr.runsum.0 = "2.5 yr ave DMI",
+              SSTICOAD.2.10.3.yr.runsum.0 = "2.5 yr ave SST - ICOADS",
               log.CHL.2.5.mon7to9.0 = "Jul-Sep log ns-CHL",
               log.CHL.2.5.mon10to12.0 = "Oct-Dec log ns-CHL"
 )
@@ -62,7 +62,7 @@ latexvarnames <- c(Year="Year",
               Precip.Kerala.mon4to5.0 = "\\shortstack{Apr-May\\\\l-Precip}",
               ONI.mon1to12.0 = "ONI",
               DMI.mon9to11.0 = "\\shortstack{Sep-Nov\\\\DMI}",
-              DMI.3.yr.runsum.0 = "\\shortstack{2.5 yr\\\\ave DMI}",
+              SSTICOAD.2.10.3.yr.runsum.0 = "\\shortstack{2.5 yr\\\\ave r-SST\\\\ICOADS}",
               Bakun.UPW.mon6to9.0 = "\\shortstack{Jun-Sep\\\\Bakun UPW}",
               SST.2.10.mon3to5.0 = "\\shortstack{Apr-May\\\\r-SST}",
               SST.2.5.mon10to12.0 = "\\shortstack{Oct-Dec\\\\ns-SST}",
